src/objects/RollupConfigs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Child_Object_Name__c</fullName>
        <description>Stores the API name of the child object which contains fields to be rolled up by the Parent</description>
        <inlineHelpText>Stores the API name of the child object which contains fields to be rolled up by the Parent</inlineHelpText>
        <label>Child Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object__c</fullName>
        <description>Stores the API name of the Parent object which will display the roll-up summaries of lookup fields</description>
        <inlineHelpText>Stores the API name of the Parent object which will display the roll-up summaries of lookup fields</inlineHelpText>
        <label>Parent Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentQueryField1__c</fullName>
        <description>Holds the API name of the field on the Parent object which will display the rolled-up summary of fields on the Child. Example: total_hours_spent__c</description>
        <inlineHelpText>Holds the API name of the field on the Parent object which will display the rolled-up summary of fields on the Child. Example: total_hours_spent__c</inlineHelpText>
        <label>parentQueryField1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentQueryField2__c</fullName>
        <description>Holds the API name of the field on the Parent object which will display the rolled-up summary of fields on the Child. Example: total_hours_spent__c</description>
        <inlineHelpText>Holds the API name of the field on the Parent object which will display the rolled-up summary of fields on the Child. Example: total_hours_spent__c</inlineHelpText>
        <label>parentQueryField2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentQueryField3__c</fullName>
        <description>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</description>
        <inlineHelpText>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</inlineHelpText>
        <label>parentQueryField3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentRowCount__c</fullName>
        <description>Holds the API name of the field on the parent which stores the aggregated number of child rows (e.g., if there are 15 children for a parent, value will be &quot;15&quot;)</description>
        <inlineHelpText>Holds the API name of the field on the parent which stores the aggregated number of child rows (e.g., if there are 15 children for a parent, value will be &quot;15&quot;)</inlineHelpText>
        <label>parentRowCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queryField1__c</fullName>
        <description>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</description>
        <inlineHelpText>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</inlineHelpText>
        <label>queryField1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queryField2__c</fullName>
        <description>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</description>
        <inlineHelpText>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</inlineHelpText>
        <label>queryField2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queryField3__c</fullName>
        <description>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</description>
        <inlineHelpText>Holds the API name of the field on the Child object which will be rolled up by the Parent. Example: hours_spent__c</inlineHelpText>
        <label>queryField3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queryField_parentRelationshipName__c</fullName>
        <description>Holds the API name of the field on the Child that is the Lookup relationship to the parent. Example: parent_account__c</description>
        <inlineHelpText>Holds the API name of the field on the Child that is the Lookup relationship to the parent. Example: parent_account__c</inlineHelpText>
        <label>queryField_parentRelationshipName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>RollupConfigs</label>
</CustomObject>